@@ -77,6 +77,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CMake                  Daniel Nelson
 - COBOL                  Benny Baumann
 - ColdFusion             Diego
+- Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
 - DCS                    Stelio Passaris
 - Delphi                 Járja Norbert, Benny Baumann
